# learn-computing

./: .flake8  .gitignore  pyproject.toml
data/: co2.csv  dyn.csv  gdp-growth.csv  gdp.csv
src/: constraint_sudoku.py  csp.py  genetic.py  genetic_equation.py  genetic_sudoku.py  kmeans.py  kmeans_co2.py  kmeans_patients.py  queens.py  send_more_money.py  sudoku.py
